--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
 
     <string name="no_connection_error">No network connection…</string>
     <string name="loading">Loading…</string>
+    <string name="partners">Partners</string>
+    <string name="team">The MobOS team</string>
+    <string name="coc">Code of conduct</string>
+    <string name="registration">Registration</string>
+    <string name="view_on_github">View on GitHub</string>
+    <string name="venue">Venue</string>
 </resources>
